# FastTrackTelecom

./: CMakeLists.txt  README.md  bitInverter.cpp  main.cpp
FastTrackTask1/: FastTrackTask1.sln
FastTrackTask1/FastTrackTask1/: FastTrackTask1.vcxproj  FastTrackTask1.vcxproj.filters  bitInverter.cpp
FastTrackTask1/FastTrackTask1/x64/Debug/: FastTrackTask1.exe.recipe  FastTrackTask1.ilk  vc143.idb
FastTrackTask1/FastTrackTask1/x64/Debug/FastTrackTask1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  FastTrackTask1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
FastTrackTask2_1/: main.cpp
FastTrackTask2_2/: linkedList.cpp  linkedList.h  main.cpp  task.txt  task2_2_main.cpp
FastTrackTask3/: CodeDecode.c  CodeDecode.h  RRC.asn1  build.sh  client.c  server.c
FinalTest/Task1/: DBMS.cpp
FinalTest/Task2/: ReadWrite.cpp
FinalTest/Task3/: client.cpp  tcpserver.cpp
FinalTest/Task4/: main.cpp  ptrTask.cpp
