cmake_minimum_required(VERSION 3.23)
project(FastTrackTelecom)

set(CMAKE_CXX_STANDARD 20)

add_executable(FastTrackTelecom
        FastTrackTask2_2/linkedList.cpp
        FastTrackTask2_2/linkedList.h
        FastTrackTask2_2/task2_2_main.cpp
        FastTrackTask2_1/main.cpp FinalTest/Task4/main.cpp)


